--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html, body {
+    overflow-x: hidden;
+  }
+
+  input, select, textarea {
+    @apply text-base;
+  }
+}
